@@ -1,0 +1,8 @@
+<mail>
+	<status>received</status>
+	<subject>Message to self</subject>
+	<content>Doh!</content>
+	<accountRef>
+		http://www.rmep.org/accounts/chunkylover53/
+    </accountRef>
+</mail>
