@@ -1,0 +1,48 @@
+package org.restlet.example.book.restlet.ch05.sec4.sub1;
+
+/**
+ * The mail representation bean.
+ */
+public class Mail {
+
+    private String status;
+
+    private String subject;
+
+    private String content;
+
+    private String accountRef;
+
+    public String getAccountRef() {
+        return accountRef;
+    }
+
+    public String getContent() {
+        return content;
+    }
+
+    public String getStatus() {
+        return status;
+    }
+
+    public String getSubject() {
+        return subject;
+    }
+
+    public void setAccountRef(String accountRef) {
+        this.accountRef = accountRef;
+    }
+
+    public void setContent(String content) {
+        this.content = content;
+    }
+
+    public void setStatus(String status) {
+        this.status = status;
+    }
+
+    public void setSubject(String subject) {
+        this.subject = subject;
+    }
+
+}
